Updated to reflect actuall contributors

--- a/dandelionpy/AUTHORS.txt
+++ b/dandelionpy/AUTHORS.txt
@@ -1,3 +1,4 @@
 Anders Sundman <anders@4zm.org>
 Mathias Tervo <mathias.tervo@gmail.com>
-Kristoffer Smedlund <kristoffer.smedlund@23critters.se>
+Lars Larsson <lars.la@gmail.com>
+
