--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,4 +1,4 @@
 Anders Sundman <anders@4zm.org>
 Mathias Tervo <mathias.tervo@gmail.com>
 Lars Larsson <lars.la@gmail.com>
-
+Magnus Ahltorp <map@kth.se>
